# bsdiff-rs

./: Cargo.toml
src/: lib.rs
