[package]
name = "bsdiff"
version = "0.1.3"
authors = ["pieterjan.briers@gmail.com"]
description = "Rust port of the bsdiff binary diffing algorithm."
readme = "README.md"
keywords = ["bsdiff", "bspatch", "diff"]
license = "BSD-2-Clause"
homepage = "https://github.com/space-wizards/bsdiff-rs"
repository = "https://github.com/space-wizards/bsdiff-rs"

[dependencies]
libc = { git = "https://github.com/ekiden/libc", default-features=false }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk" }

[badges]
travis-ci = { repository = "space-wizards/bsdiff-rs" }